[gd_scene load_steps=19 format=3 uid="uid://cuxjnoxgajluh"]

[ext_resource type="Script" path="res://src/overworld_chunk.gd" id="1_m016o"]
[ext_resource type="Texture2D" uid="uid://d0tqvsvufmb7y" path="res://assets/kenny_prototype_tilemap/Tilemap/tilemap_color_packed_x4.png" id="3_aattv"]
[ext_resource type="Texture2D" uid="uid://u7ae5cv5lr7e" path="res://assets/Cingulate-Cortex-EmptyTiles.png" id="3_dj6ft"]
[ext_resource type="Script" path="res://src/overworld_layer.gd" id="3_drl5x"]
[ext_resource type="Texture2D" uid="uid://dp3dv4kweom1o" path="res://assets/kenny_input_prompts/Tilemap/tilemap_white_packed.png" id="3_qhtut"]
[ext_resource type="Texture2D" uid="uid://dcxev61fs17s1" path="res://assets/Cingulate-Cortex-LetterTiles.png" id="6_x841i"]
[ext_resource type="Texture2D" uid="uid://ctsx0nsvobbsf" path="res://assets/Hippocampus-LetterTiles.png" id="7_xp4ew"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_psg06"]
texture = ExtResource("3_aattv")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
5:3/0/custom_data_0 = true
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
2:4/0/modulate = Color(0.952941, 0.333333, 0.305882, 0.831373)
2:4/0/custom_data_3 = true
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
5:4/0/custom_data_0 = true
5:4/0/custom_data_1 = true
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
3:5/0/modulate = Color(0, 1, 0, 1)
3:5/0/custom_data_2 = true
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_y5180"]
texture = ExtResource("3_dj6ft")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
2:1/0/custom_data_0 = true

[sub_resource type="TileSet" id="TileSet_wok16"]
tile_size = Vector2i(64, 64)
custom_data_layer_0/name = "walkable"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "exit_tile"
custom_data_layer_1/type = 1
custom_data_layer_2/name = "navigation_tile"
custom_data_layer_2/type = 1
custom_data_layer_3/name = "health_tile"
custom_data_layer_3/type = 1
sources/1 = SubResource("TileSetAtlasSource_psg06")
sources/2 = SubResource("TileSetAtlasSource_y5180")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5novw"]
texture = ExtResource("7_xp4ew")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/custom_data_0 = "A"
1:0/0 = 0
1:0/0/custom_data_0 = "B"
2:0/0 = 0
2:0/0/custom_data_0 = "C"
3:0/0 = 0
3:0/0/custom_data_0 = "D"
4:0/0 = 0
4:0/0/custom_data_0 = "E"
5:0/0 = 0
5:0/0/custom_data_0 = "F"
6:0/0 = 0
6:0/0/custom_data_0 = "G"
7:0/0 = 0
7:0/0/custom_data_0 = "H"
8:0/0 = 0
8:0/0/custom_data_0 = "I"
9:0/0 = 0
9:0/0/custom_data_0 = "J"
10:0/0 = 0
10:0/0/custom_data_0 = "K"
11:0/0 = 0
11:0/0/custom_data_0 = "L"
12:0/0 = 0
12:0/0/custom_data_0 = "M"
13:0/0 = 0
13:0/0/custom_data_0 = "N"
14:0/0 = 0
14:0/0/custom_data_0 = "O"
15:0/0 = 0
15:0/0/custom_data_0 = "P"
16:0/0 = 0
16:0/0/custom_data_0 = "Q"
17:0/0 = 0
17:0/0/custom_data_0 = "R"
18:0/0 = 0
18:0/0/custom_data_0 = "S"
19:0/0 = 0
19:0/0/custom_data_0 = "T"
20:0/0 = 0
20:0/0/custom_data_0 = "U"
21:0/0 = 0
21:0/0/custom_data_0 = "V"
22:0/0 = 0
22:0/0/custom_data_0 = "W"
23:0/0 = 0
23:0/0/custom_data_0 = "X"
24:0/0 = 0
24:0/0/custom_data_0 = "Y"
25:0/0 = 0
25:0/0/custom_data_0 = "Z"
26:0/0 = 0
0:1/0 = 0
0:1/0/custom_data_0 = "a"
1:1/0 = 0
1:1/0/custom_data_0 = "b"
2:1/0 = 0
2:1/0/custom_data_0 = "c"
3:1/0 = 0
3:1/0/custom_data_0 = "d"
4:1/0 = 0
4:1/0/custom_data_0 = "e"
5:1/0 = 0
5:1/0/custom_data_0 = "f"
6:1/0 = 0
6:1/0/custom_data_0 = "g"
7:1/0 = 0
7:1/0/custom_data_0 = "h"
8:1/0 = 0
8:1/0/custom_data_0 = "i"
9:1/0 = 0
9:1/0/custom_data_0 = "j"
10:1/0 = 0
10:1/0/custom_data_0 = "k"
11:1/0 = 0
11:1/0/custom_data_0 = "l"
12:1/0 = 0
12:1/0/custom_data_0 = "m"
13:1/0 = 0
13:1/0/custom_data_0 = "n"
14:1/0 = 0
14:1/0/custom_data_0 = "o"
15:1/0 = 0
15:1/0/custom_data_0 = "p"
16:1/0 = 0
16:1/0/custom_data_0 = "q"
17:1/0 = 0
17:1/0/custom_data_0 = "r"
18:1/0 = 0
18:1/0/custom_data_0 = "s"
19:1/0 = 0
19:1/0/custom_data_0 = "t"
20:1/0 = 0
20:1/0/custom_data_0 = "u"
21:1/0 = 0
21:1/0/custom_data_0 = "v"
22:1/0 = 0
22:1/0/custom_data_0 = "w"
23:1/0 = 0
23:1/0/custom_data_0 = "x"
24:1/0 = 0
24:1/0/custom_data_0 = "y"
25:1/0 = 0
25:1/0/custom_data_0 = "z"

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_b3fv8"]
texture = ExtResource("6_x841i")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0

[sub_resource type="TileSet" id="TileSet_p74io"]
tile_size = Vector2i(64, 64)
custom_data_layer_0/name = "input_value"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_5novw")
sources/2 = SubResource("TileSetAtlasSource_b3fv8")

[sub_resource type="TileMapPattern" id="TileMapPattern_loqc6"]
tile_data = PackedInt32Array(0, 1114112, 9, 65536, 1310720, 9, 131072, 1507328, 9, 1, 1179648, 9, 65537, 1376256, 9, 131073, 1572864, 9, 196609, 1703936, 9, 2, 1245184, 9, 65538, 1441792, 9, 131074, 1638400, 9)

[sub_resource type="TileMapPattern" id="TileMapPattern_edaqx"]
tile_data = PackedInt32Array(65536, 1179648, 11, 65537, 1638400, 10, 2, 1703936, 10, 65538, 1245184, 10, 131074, 1114112, 10, 3, 1441792, 10, 65539, 1507328, 10, 131075, 1572864, 11, 4, 1376256, 11, 65540, 1572864, 10, 131076, 1638400, 11, 5, 1441792, 11, 65541, 1310720, 11, 131077, 1310720, 12, 6, 1376256, 12, 65542, 1507328, 11, 131078, 1507328, 12, 7, 1310720, 10, 65543, 1376256, 10, 131079, 1638400, 12, 8, 1703936, 11, 65544, 1572864, 12, 131080, 1179648, 10, 65545, 1245184, 11, 131081, 1441792, 12, 131082, 1245184, 12)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bfi3a"]
texture = ExtResource("3_qhtut")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
27:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
31:4/0 = 0
32:4/0 = 0
33:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
27:5/0 = 0
28:5/0 = 0
29:5/0 = 0
30:5/0 = 0
31:5/0 = 0
32:5/0 = 0
33:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
25:6/0 = 0
26:6/0 = 0
27:6/0 = 0
28:6/0 = 0
29:6/0 = 0
30:6/0 = 0
31:6/0 = 0
32:6/0 = 0
33:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
25:7/0 = 0
26:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
30:7/0 = 0
31:7/0 = 0
32:7/0 = 0
33:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
25:8/0 = 0
26:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
30:8/0 = 0
31:8/0 = 0
32:8/0 = 0
33:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
17:9/0/custom_data_0 = "1"
18:9/0 = 0
18:9/0/custom_data_0 = "2"
19:9/0 = 0
19:9/0/custom_data_0 = "3"
20:9/0 = 0
20:9/0/custom_data_0 = "4"
21:9/0 = 0
21:9/0/custom_data_0 = "5"
22:9/0 = 0
22:9/0/custom_data_0 = "6"
23:9/0 = 0
23:9/0/custom_data_0 = "7"
24:9/0 = 0
24:9/0/custom_data_0 = "8"
25:9/0 = 0
25:9/0/custom_data_0 = "9"
26:9/0 = 0
26:9/0/custom_data_0 = "0"
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
30:9/0 = 0
31:9/0 = 0
32:9/0 = 0
33:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
17:10/0/custom_data_0 = "q"
18:10/0 = 0
18:10/0/custom_data_0 = "w"
19:10/0 = 0
19:10/0/custom_data_0 = "e"
20:10/0 = 0
20:10/0/custom_data_0 = "r"
21:10/0 = 0
21:10/0/custom_data_0 = "t"
22:10/0 = 0
22:10/0/custom_data_0 = "y"
23:10/0 = 0
23:10/0/custom_data_0 = "u"
24:10/0 = 0
24:10/0/custom_data_0 = "i"
25:10/0 = 0
25:10/0/custom_data_0 = "o"
26:10/0 = 0
26:10/0/custom_data_0 = "p"
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
30:10/0 = 0
31:10/0 = 0
32:10/0 = 0
33:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
18:11/0/custom_data_0 = "a"
19:11/0 = 0
19:11/0/custom_data_0 = "s"
20:11/0 = 0
20:11/0/custom_data_0 = "d"
21:11/0 = 0
21:11/0/custom_data_0 = "f"
22:11/0 = 0
22:11/0/custom_data_0 = "g"
23:11/0 = 0
23:11/0/custom_data_0 = "h"
24:11/0 = 0
24:11/0/custom_data_0 = "j"
25:11/0 = 0
25:11/0/custom_data_0 = "k"
26:11/0 = 0
26:11/0/custom_data_0 = "l"
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
30:11/0 = 0
31:11/0 = 0
32:11/0 = 0
33:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
19:12/0/custom_data_0 = "z"
20:12/0 = 0
20:12/0/custom_data_0 = "x"
21:12/0 = 0
21:12/0/custom_data_0 = "c"
22:12/0 = 0
22:12/0/custom_data_0 = "v"
23:12/0 = 0
23:12/0/custom_data_0 = "b"
24:12/0 = 0
24:12/0/custom_data_0 = "n"
25:12/0 = 0
25:12/0/custom_data_0 = "m"
26:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
30:12/0 = 0
31:12/0 = 0
32:12/0 = 0
33:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
26:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
30:13/0 = 0
31:13/0 = 0
32:13/0 = 0
33:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
25:14/0 = 0
26:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
30:14/0 = 0
31:14/0 = 0
32:14/0 = 0
33:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
25:15/0 = 0
26:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
30:15/0 = 0
31:15/0 = 0
32:15/0 = 0
33:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
25:16/0 = 0
26:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
30:16/0 = 0
31:16/0 = 0
32:16/0 = 0
33:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
25:17/0 = 0
26:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
30:17/0 = 0
31:17/0 = 0
32:17/0 = 0
33:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
25:18/0 = 0
26:18/0 = 0
27:18/0 = 0
28:18/0 = 0
29:18/0 = 0
30:18/0 = 0
31:18/0 = 0
32:18/0 = 0
33:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
31:19/0 = 0
32:19/0 = 0
33:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
31:20/0 = 0
32:20/0 = 0
33:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
24:21/0 = 0
25:21/0 = 0
26:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0
31:21/0 = 0
32:21/0 = 0
33:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
24:22/0 = 0
25:22/0 = 0
26:22/0 = 0
27:22/0 = 0
28:22/0 = 0
29:22/0 = 0
30:22/0 = 0
31:22/0 = 0
32:22/0 = 0
33:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
24:23/0 = 0
25:23/0 = 0
26:23/0 = 0
27:23/0 = 0
28:23/0 = 0
29:23/0 = 0
30:23/0 = 0
31:23/0 = 0
32:23/0 = 0
33:23/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vhhtr"]
texture = ExtResource("6_x841i")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
27:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
31:0/0 = 0
32:0/0 = 0
33:0/0 = 0
34:0/0 = 0
35:0/0 = 0
36:0/0 = 0
37:0/0 = 0
38:0/0 = 0
39:0/0 = 0
40:0/0 = 0
41:0/0 = 0
42:0/0 = 0
43:0/0 = 0
44:0/0 = 0
45:0/0 = 0
46:0/0 = 0
47:0/0 = 0
48:0/0 = 0
49:0/0 = 0
50:0/0 = 0
51:0/0 = 0
52:0/0 = 0
53:0/0 = 0
54:0/0 = 0
55:0/0 = 0
56:0/0 = 0
57:0/0 = 0
58:0/0 = 0
59:0/0 = 0
60:0/0 = 0
61:0/0 = 0
62:0/0 = 0
63:0/0 = 0
64:0/0 = 0
65:0/0 = 0
66:0/0 = 0
67:0/0 = 0
68:0/0 = 0
69:0/0 = 0
70:0/0 = 0
71:0/0 = 0
72:0/0 = 0
73:0/0 = 0
74:0/0 = 0
75:0/0 = 0
76:0/0 = 0
77:0/0 = 0
78:0/0 = 0
79:0/0 = 0
80:0/0 = 0
81:0/0 = 0
82:0/0 = 0
83:0/0 = 0
84:0/0 = 0
85:0/0 = 0
86:0/0 = 0
87:0/0 = 0
88:0/0 = 0
89:0/0 = 0
90:0/0 = 0
91:0/0 = 0
92:0/0 = 0
93:0/0 = 0
94:0/0 = 0
95:0/0 = 0
96:0/0 = 0
97:0/0 = 0
98:0/0 = 0
99:0/0 = 0
100:0/0 = 0
101:0/0 = 0
102:0/0 = 0
103:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
27:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
31:1/0 = 0
32:1/0 = 0
33:1/0 = 0
34:1/0 = 0
35:1/0 = 0
36:1/0 = 0
37:1/0 = 0
38:1/0 = 0
39:1/0 = 0
40:1/0 = 0
41:1/0 = 0
42:1/0 = 0
43:1/0 = 0
44:1/0 = 0
45:1/0 = 0
46:1/0 = 0
47:1/0 = 0
48:1/0 = 0
49:1/0 = 0
50:1/0 = 0
51:1/0 = 0
52:1/0 = 0
53:1/0 = 0
54:1/0 = 0
55:1/0 = 0
56:1/0 = 0
57:1/0 = 0
58:1/0 = 0
59:1/0 = 0
60:1/0 = 0
61:1/0 = 0
62:1/0 = 0
63:1/0 = 0
64:1/0 = 0
65:1/0 = 0
66:1/0 = 0
67:1/0 = 0
68:1/0 = 0
69:1/0 = 0
70:1/0 = 0
71:1/0 = 0
72:1/0 = 0
73:1/0 = 0
74:1/0 = 0
75:1/0 = 0
76:1/0 = 0
77:1/0 = 0
78:1/0 = 0
79:1/0 = 0
80:1/0 = 0
81:1/0 = 0
82:1/0 = 0
83:1/0 = 0
84:1/0 = 0
85:1/0 = 0
86:1/0 = 0
87:1/0 = 0
88:1/0 = 0
89:1/0 = 0
90:1/0 = 0
91:1/0 = 0
92:1/0 = 0
93:1/0 = 0
94:1/0 = 0
95:1/0 = 0
96:1/0 = 0
97:1/0 = 0
98:1/0 = 0
99:1/0 = 0
100:1/0 = 0
101:1/0 = 0
102:1/0 = 0
103:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
25:2/0 = 0
26:2/0 = 0
27:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
31:2/0 = 0
32:2/0 = 0
33:2/0 = 0
34:2/0 = 0
35:2/0 = 0
36:2/0 = 0
37:2/0 = 0
38:2/0 = 0
39:2/0 = 0
40:2/0 = 0
41:2/0 = 0
42:2/0 = 0
43:2/0 = 0
44:2/0 = 0
45:2/0 = 0
46:2/0 = 0
47:2/0 = 0
48:2/0 = 0
49:2/0 = 0
50:2/0 = 0
51:2/0 = 0
52:2/0 = 0
53:2/0 = 0
54:2/0 = 0
55:2/0 = 0
56:2/0 = 0
57:2/0 = 0
58:2/0 = 0
59:2/0 = 0
60:2/0 = 0
61:2/0 = 0
62:2/0 = 0
63:2/0 = 0
64:2/0 = 0
65:2/0 = 0
66:2/0 = 0
67:2/0 = 0
68:2/0 = 0
69:2/0 = 0
70:2/0 = 0
71:2/0 = 0
72:2/0 = 0
73:2/0 = 0
74:2/0 = 0
75:2/0 = 0
76:2/0 = 0
77:2/0 = 0
78:2/0 = 0
79:2/0 = 0
80:2/0 = 0
81:2/0 = 0
82:2/0 = 0
83:2/0 = 0
84:2/0 = 0
85:2/0 = 0
86:2/0 = 0
87:2/0 = 0
88:2/0 = 0
89:2/0 = 0
90:2/0 = 0
91:2/0 = 0
92:2/0 = 0
93:2/0 = 0
94:2/0 = 0
95:2/0 = 0
96:2/0 = 0
97:2/0 = 0
98:2/0 = 0
99:2/0 = 0
100:2/0 = 0
101:2/0 = 0
102:2/0 = 0
103:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
25:3/0 = 0
26:3/0 = 0
27:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
31:3/0 = 0
32:3/0 = 0
33:3/0 = 0
34:3/0 = 0
35:3/0 = 0
36:3/0 = 0
37:3/0 = 0
38:3/0 = 0
39:3/0 = 0
40:3/0 = 0
41:3/0 = 0
42:3/0 = 0
43:3/0 = 0
44:3/0 = 0
45:3/0 = 0
46:3/0 = 0
47:3/0 = 0
48:3/0 = 0
49:3/0 = 0
50:3/0 = 0
51:3/0 = 0
52:3/0 = 0
53:3/0 = 0
54:3/0 = 0
55:3/0 = 0
56:3/0 = 0
57:3/0 = 0
58:3/0 = 0
59:3/0 = 0
60:3/0 = 0
61:3/0 = 0
62:3/0 = 0
63:3/0 = 0
64:3/0 = 0
65:3/0 = 0
66:3/0 = 0
67:3/0 = 0
68:3/0 = 0
69:3/0 = 0
70:3/0 = 0
71:3/0 = 0
72:3/0 = 0
73:3/0 = 0
74:3/0 = 0
75:3/0 = 0
76:3/0 = 0
77:3/0 = 0
78:3/0 = 0
79:3/0 = 0
80:3/0 = 0
81:3/0 = 0
82:3/0 = 0
83:3/0 = 0
84:3/0 = 0
85:3/0 = 0
86:3/0 = 0
87:3/0 = 0
88:3/0 = 0
89:3/0 = 0
90:3/0 = 0
91:3/0 = 0
92:3/0 = 0
93:3/0 = 0
94:3/0 = 0
95:3/0 = 0
96:3/0 = 0
97:3/0 = 0
98:3/0 = 0
99:3/0 = 0
100:3/0 = 0
101:3/0 = 0
102:3/0 = 0
103:3/0 = 0

[sub_resource type="TileSet" id="TileSet_yk6ka"]
custom_data_layer_0/name = "input_value"
custom_data_layer_0/type = 4
sources/0 = SubResource("TileSetAtlasSource_bfi3a")
sources/1 = SubResource("TileSetAtlasSource_vhhtr")
pattern_0 = SubResource("TileMapPattern_loqc6")
pattern_1 = SubResource("TileMapPattern_edaqx")

[node name="OverworldChunk" type="Node2D"]
script = ExtResource("1_m016o")

[node name="OverworldMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_wok16")
script = ExtResource("3_drl5x")

[node name="InputMapLayer" type="TileMapLayer" parent="."]
tile_set = SubResource("TileSet_p74io")

[node name="InputMapLayer-depricated" type="TileMapLayer" parent="."]
scale = Vector2(4, 4)
tile_set = SubResource("TileSet_yk6ka")
